--- a/src/component/Events/EventPage/EventCard/EventCard.css
+++ b/src/component/Events/EventPage/EventCard/EventCard.css
@@ -19,11 +19,13 @@
 
 .eventImgCard,
 .eventImgCard img {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
   height: 260px;
 }
 .eventCardDetails {
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
   background-color: #34373b;
   color: white;
   padding: 1.2rem 1.2rem;
