--- a/src/component/About/Vission/Vision.css
+++ b/src/component/About/Vission/Vision.css
@@ -1,20 +1,23 @@
 .nrbVission-div {
   /* background-color: white; */
   border-radius: 10px;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
   /* margin-left: 30px;
   margin-right: 30px; */
 }
-.visionTextHeader{
+.visionTextHeader {
   color: var(--bg-orange);
 }
-.visionImgContainer img{
+.visionImgContainer img {
   width: 100%;
 }
 
-@media only screen and (max-width: 500px) {
-  .vision-details {
-    text-align: justify;
+.visionText {
+  /* background-color: rgb(171, 210, 243); */
+  /* background-color: #eaf1f8; */
+  background-color: #ffffff;
+  border-radius: 10px;
+  text-align: justify;
   text-justify: inter-word;
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;  */
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;  */
