--- a/src/component/YoungCongress/YCAbout/YCAboutpage.css
+++ b/src/component/YoungCongress/YCAbout/YCAboutpage.css
@@ -34,9 +34,11 @@
 }
 .yca-title h1{
   text-align: start;
-font-weight: 100;
+font-weight: 400;
+line-height: 25px;
 /* font-style: italic; */
-font-family:Verdana, Geneva, Tahoma, sans-serif;
+font-family:sans-serif;
+
 }
  
 .yca-about-section{
@@ -110,11 +112,11 @@ font-size: 30px;
     padding: 10px;  
     margin-right: 10px; 
 }
-/* .yca-join-btn Button{
+.yca-join-btn Button{
   margin-left: 5%;  
   margin-top: 5%;
 }
-  */
+ 
 @media only screen and (max-width: 1400px) {
   .yca-description{ 
       width: 85%;  
