--- a/src/component/YoungCongress/YCProgram/YCProgramStyle.css
+++ b/src/component/YoungCongress/YCProgram/YCProgramStyle.css
@@ -80,7 +80,7 @@
     font-size: 15px;
     font-weight: 600;
     opacity: .8;
-    font-style: italic;
+    /* font-style: italic; */
 }
 .ycpc-type::before{
     content: '';
