--- a/src/component/YoungCongress/YCAbout/YCAboutpage.css
+++ b/src/component/YoungCongress/YCAbout/YCAboutpage.css
@@ -400,6 +400,7 @@ justify-content: center;
 }
 .ycateam-btn a button{
  padding: 15px;
+cursor: pointer;
  font-size: 20px;
  border: none;
  background: rgb(23, 80, 202);
