--- a/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
+++ b/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
@@ -1,9 +1,10 @@
 .video-Gallary{
-   background: #f3f7f5;
+   background: #ffffff;
    margin-top: 10px;
    padding: 30px;
    padding-top: 20px !important;
    border-radius: 10px;
+   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .video-gallary-column{
    margin-top: 10px;
