--- a/src/component/Contact/ContactInfo.css
+++ b/src/component/Contact/ContactInfo.css
@@ -2,161 +2,173 @@
   background: #ffffff;
   margin-top: 15px;
   border-radius: 10px;
-  padding: 30px 15px;
+  padding: 30px 30px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
- .contactinfo-container{
-    overflow-x: hidden;
-    /* background:  ; */
-    /* margin: .5% 13%; */
-    margin-top: 25px;
-    /* padding: 50px 15px; */
-    /* background: #ffffff; */
-    /* border-radius: 10px; */
-    /* background: #000; */
-    border-radius: 10px !important;
-/* background: #000; */
-padding-top: 25px;
- }
- .contactinfo-bn-txt, .contactinfo-us-txt{
- padding: 0px 20px 20px 20px;
- }
- .contactinfo-bn-details{
-  background: #23385E;
-    padding: 20px;    
-    height: 360px;
-    border-radius: 10px !important;
-    width: 100%;
- }
- .contactinfo-us-details{
-  padding-left: 20px;
- }
- .contactinfo-bn-details, .contactinfo-us-details{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  
- }
- .contactinfo-bn-title h2, .contactinfo-us-title h2{
-    font-size: 22px;
-    letter-spacing:1px;
- }
- .material-icons-sharp{
-    padding: 5px;
- }
- .contactinfo-location-icon{
-    display: flex;
-    align-items: center; 
- }
- .contactinfo-location-icon span{
-column-rule: #ffffff;
-}
- .contactinfo-location-icon h2{
-     font-size: 18px;
-     font-weight:100; 
-  }
-.contactinfo-location-icon h2 span{
-    font-size: 15px;
-    font-weight:bold; 
-  }
+ 
  /* ConatctForm  */
-
  .contact-form-conatiner{
-   border-radius: 10px;
-    /* background: #000; */
-    padding: 3px 0px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    border: 1px solid rgb(175, 169, 169);
- background:#ffffff ;
+  /* background: rgb(206, 192, 192); */
+  border-radius: 10px;
+  /* margin: 0px 20px; */
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+/* margin: 0px 20px; */
+ }
+ .contactinfo-grid-container{
+  /* background: #32609E; */
+  /* margin-bottom: 20px ; */
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+ }
+
+.contactinfo-bn{
+  background: #ffffff ;
+ height: 350px;
+  color: #000;
+}
+.contactinfo-bn-title h2, .contactinfo-us-title h2{
+font-weight: normal;
+font-size: 30px;
+font-style: 300px;
+text-align: center;
+
+}
+.contactinfo-bn-title-span, .contactinfo-us-title-span{
+  border-bottom: 2px solid rgb(77, 76, 76);
+text-align: center;
+
+}
+.contactinfo-location-icon{
+  display: flex;
+  align-items: center;
+  padding: 0px 18px;
+  line-height:15px;
+}
+.material-icons-sharp{
+  padding-right: 10px;
+}
+ 
+.contactinfo-location-icon h2{
+  font-weight: normal;
+  font-size:15px;
+}
+.contactinfo-location-icon h2 span{
+  font-weight: 500;
+  color: #32609E;
+}
+.contactinfo-us{
+}
+.contactinfo-bn-map, .conatactinfo-us-map {
+  /* background: rgb(88, 141, 39); */
+}
+
+
+/* CONTATCT FORM  */
+ .contact-form{
+    /* margin: 2% 10%; */
+    /* border: 1px solid rgb(175, 169, 169); */
+padding-right: 55px;
+/* padding-top: 30px;   */
+border-radius: 10px;
+ }
+  /* ConatctForm  */
+  .contact-form-conatiner{
+    /* background: rgb(206, 192, 192); */
+    background: #ffffff;
+    /* border-radius: 10px; */
+    color: #0000;
+    /* margin: 0px 20px; */
+    margin-top: 20px;
+  /* margin: 0px 20px; */
+   }
+ .contact-form-grid{
+  width: 100%;
+  /* padding: 20px; */
+  padding-bottom: 20px;
+  margin: 10px 0px 0px 0px;
+ }
+ .contact-form-contact-txt{
+  /* display: none; */
+  background: #ffffff;
+ }
+ .contact-form-grid input{
+   font-size: 20px;
+   text-align: start;
+  width:100%;
+   padding: 10px;
+   border: none;
+   background: none;
+   font-weight: normal;
+   margin-bottom: 10px;
+   color: #000;
+   border-bottom: 1px solid #000;
+   outline: none;
+ }
+  .contact-form-grid input::-webkit-outer-spin-button,
+  .contact-form-grid input::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
  }
  .contact-form{
-    margin: 2% 10%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: end !important;
+  /* background: rgb(212, 195, 195); */
  }
- .contact-form-grid{
-   padding: 0px 30px;
+ .contact-form-grid input::placeholder{
+  color: #000;
  }
- .contact-form-title h5{
-   font-size: 30px;
-   text-align: start;
-  color: #ffffff;   
-  font-style: italic;
- }
-
-.contact-form-submit-btn{
-   background: #ffffff;
-    offset: none;
-    color: #333;
-    margin-left: 20px;
+ .contact-form-grid textarea{
+  font-size: 20px;
+  text-align: start;
+ width: 100%;
+  padding: 10px;
+  border: none;
+  background: none;
+  font-weight: 100;
+  margin-bottom: 10px;
+  color: #000;
+  border-bottom: 1px solid #000;
+  outline: none;
 }
+ .contact-form-grid textarea::placeholder{
+  color: #000;
+  letter-spacing: 1px;
+ }
+ .contact-form-title h2{
+  color: #000;
+  border-bottom: 2px solid #000;
+ }
+.contact-form-submit-btn{
+  border:1px solid #000;
+  padding: 10px 20px;
+  font-size: 20px;
+  background: none;
+  offset: none;
+  color: #000;
+  align-self:end;
+  display: block;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-top: 15px;
+}
+ 
+ 
  /* CONTACTINFOMAP  */
  
  .contact-info-map-bn-iframe, .contact-info-map-us-iframe{
    width: 100%;
    /* padding: 10px 10px; */
    /* height: ; */
-   height: 360px;
-   margin-top: 0px;
-   margin-top: -16px;
-   border-radius: 10px;
+ height: 350px;
+   /* margin-top: -16px; */
+   /* border-radius: 10px; */
  }
+  
  
- .contactinfo-bn{
-   /* background: #2CA9CC; */
-   color: #ffffff;
-   margin-left: .2px;
-   
- }
- .contactinfo-bn-txt{
-  /* background: #23385E; */
-border-radius: 10px !important;
-border-top-left-radius: 20px !important;
-border-top-right-radius: 35px !important;
- }
- .contact-info-map-bn{
-   /* margin-top: 10px; */
- }
- .contact-info-map-us{
-   margin-top: 6px;
- }
- .contactinfo-us-txt{
-  /* background: #23385E; */
-  /* color: #ffffff; */
- }
-   .contactinfo-us{
-      border-radius: 20px; 
-      margin: 20px 0px;
- }
-@media only screen and (max-width:992px){
-  .conatactinfo-us{
-    display: flex !important; 
-    flex-direction: column !important;
-    align-items: center !important;
-  }
-   .conatactinfo-us-map{
-    width: 100%;
-    order: 2!important;
-   }
-   .contactinfo-us-txt{
-    width: 100%;
-  }
-}
  
- @media only screen and (max-width:768px){
-  .contactinfo-bn{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-.contactinfo-bn-txt{
-  width: 100% !important;
-} 
- .contactinfo-us{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
- }
-.contactinfo-map-txt{
-  width: 100%;
- } 
  
- }
