--- a/src/component/Contact/ContactInfo.css
+++ b/src/component/Contact/ContactInfo.css
@@ -5,13 +5,17 @@
   padding: 30px 30px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
- 
+ .contact-form-contact-txt img{ 
+  /* background:  ; */
+  width: 90%;
+  height: 100%; 
+ }
  /* ConatctForm  */
  .contact-form-conatiner{
   /* background: rgb(206, 192, 192); */
   border-radius: 10px;
   /* margin: 0px 20px; */
-  margin-top: 20px;
+  margin-top: 20px !important;
   display: grid;
   grid-template-columns: 50% 50%;
 /* margin: 0px 20px; */
@@ -22,6 +26,8 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 50% 50%;
+  border: 3px solid #F2F2F9;
+  padding: 2px;
  }
 
 .contactinfo-bn{
@@ -34,7 +40,7 @@ font-weight: normal;
 font-size: 30px;
 font-style: 300px;
 text-align: center;
-
+font-weight: normal;
 }
 .contactinfo-bn-title-span, .contactinfo-us-title-span{
   border-bottom: 2px solid rgb(77, 76, 76);
@@ -95,7 +101,6 @@ border-radius: 10px;
   background: #ffffff;
  }
  .contact-form-grid input{
-   font-size: 20px;
    text-align: start;
   width:100%;
    padding: 10px;
@@ -104,8 +109,10 @@ border-radius: 10px;
    font-weight: normal;
    margin-bottom: 10px;
    color: #000;
-   border-bottom: 1px solid #000;
+   border-bottom: 1px solid rgb(128, 123, 123);
    outline: none;
+   font-size: 15px;
+   letter-spacing: .5px;
  }
   .contact-form-grid input::-webkit-outer-spin-button,
   .contact-form-grid input::-webkit-inner-spin-button {
@@ -117,13 +124,16 @@ border-radius: 10px;
   align-items: center;
   flex-direction: column;
   justify-content: end !important;
+  /* margin: 20px 0px; */
+  margin-bottom: 50px;
   /* background: rgb(212, 195, 195); */
  }
  .contact-form-grid input::placeholder{
-  color: #000;
+  color: rgb(90, 89, 89);
+  font-size: 15px;
+  letter-spacing: .5px;
  }
  .contact-form-grid textarea{
-  font-size: 20px;
   text-align: start;
  width: 100%;
   padding: 10px;
@@ -132,29 +142,34 @@ border-radius: 10px;
   font-weight: 100;
   margin-bottom: 10px;
   color: #000;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid rgb(128, 123, 123);
   outline: none;
+  font-size: 15px;
+  letter-spacing: .5px;
 }
  .contact-form-grid textarea::placeholder{
-  color: #000;
-  letter-spacing: 1px;
- }
- .contact-form-title h2{
-  color: #000;
-  border-bottom: 2px solid #000;
+  color: rgb(90, 89, 89);
+  font-size: 15px;
+  letter-spacing: .5px;
+ } 
+ .contact-form-title-span{
+  border-bottom: 2px solid rgb(77, 76, 76);
+text-align: center;
+color: #000;
+font-weight: normal;
  }
 .contact-form-submit-btn{
-  border:1px solid #000;
+  border:1px solid rgb(90, 89, 89);
   padding: 10px 20px;
-  font-size: 20px;
+  font-size: 15px;
   background: none;
   offset: none;
-  color: #000;
-  align-self:end;
+  color: rgb(90, 89, 89);
+  align-self:start;
   display: block;
   cursor: pointer;
   border-radius: 4px;
-  margin-top: 15px;
+  margin-top: 10px;
 }
  
  
