--- a/src/component/YoungCongress/YCAbout/YCAboutpage.css
+++ b/src/component/YoungCongress/YCAbout/YCAboutpage.css
@@ -29,7 +29,7 @@ position: relative;
   background-attachment: fixed;
  }
 
-.yca-title{
+/* .yca-title{
  text-align: center;
  padding-top: 30px; 
  padding-left: 5%;
@@ -39,11 +39,9 @@ position: relative;
   text-align: start;
 font-weight: 400;
 line-height: 25px;
-/* font-style: italic; */
 font-family:sans-serif;
-
 }
- 
+  */
 .yca-about-section{
   display: grid;
   grid-template-columns: 50% 50%;
@@ -115,19 +113,16 @@ font-size: 30px;
     padding: 10px;  
     margin-right: 10px; 
 }
-.yca-join-btn Button{
-  /* margin-left: 5%;  
-  margin-top: 35%; */
+/* .yca-join-btn Button{ 
   position: absolute;
   left: 15%;
   padding: 20px 40px;
   bottom: 36%;
-  /* background:rgba(37, 49, 109, .5) !important;  */
   color: #333 !important;
   font-size: 25px !important;
   outline: none !important;
   border: 1px solid #333 !important;
-} 
+}  */
 @media only screen and (max-width: 1400px) {
   .yca-description{ 
       width: 85%;  
@@ -150,6 +145,13 @@ font-size: 30px;
    
    }
 }
+@media only screen and (max-width:470px){
+  .yca-description{       
+    background-image: url('../../../assets//image/YCAbout/yc-mo.png'); 
+    height: 300px;
+   }
+}
+ 
 /* MISSION - VISSION  */
 .yc-mission-vision-container{
   border-bottom-left-radius: 10px;
