--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -10,7 +10,14 @@
     font-size: 1rem;
     -moz-box-shadow: 0 1px 2px rgba(90, 90, 90, 0.4);
     -webkit-box-shadow: 0 1px 2px rgba(90, 90, 90, 0.4);
-    box-shadow: 0 1px 2px rgba(90, 90, 90, 0.4);
+    box-shadow: 0 1px 3px rgba(90, 90, 90, 0.4);
+
+    /* for the top fixed code  */
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
 
   }
   
@@ -74,8 +81,25 @@
   .menu-icon {
     display: none;
   }
+
+  /* @media screen and (min-width: 961px) {
+    .navbar{
+      overflow: hidden;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 999;
+    }
+    
+  } */
   
   @media screen and (max-width: 960px) {
+
+    /* this is for the navbar visible button in mobile */
+    .navbar{
+      overflow: visible;
+    }
+
     .NavbarItems {
       position: relative;
     }
