--- a/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
+++ b/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
@@ -26,11 +26,16 @@
     margin: 40px 0px;   
 }
 .executive-memberBtn button{
-color: #ffffff;  
-background:#333D79FF;
-border: none;
-}
-
+color: #333D79FF;  
+background:none;
+border: 2px solid #333D79FF;
+} 
+.executive-memberBtn button:hover{
+    color: #333D79FF !important;  
+    background:none !important;
+    border: 2px solid #333D79FF !important;
+    }
+    
 @media only screen and (max-width:575px){
     .executive-container{
         background:none;
@@ -39,14 +44,5 @@ border: none;
     .executive-container-para{
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
-    }
-    .executive-memberBtn{
-        background: #f3f7f5;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        padding: 30px 0px;
-        margin-top: -20px;
-        
-    }
-     
+    }     
 }
