--- a/src/pages/Galllery/Gallary.css
+++ b/src/pages/Galllery/Gallary.css
@@ -68,23 +68,52 @@ font-family:Verdana, Geneva, Tahoma, sans-serif;
   padding: 10px 0px;
  padding-bottom: 50px;
 }
-.gallary-img-seemoreBtn button{
-color: #ffffff;  
-background:#333D79FF;
-border: none;
+.gallary-img-seemoreBtn a{
+    text-decoration: none;
 }
-
+.gallary-img-seemoreBtn button{
+color: #333D79FF;  
+background:none;
+border: none;
+border: 2px solid #333D79FF;
+text-decoration: none !important;
+font-family:Arial, Helvetica, sans-serif;
+font-size: 20px;
+}
+.gallary-img-seemoreBtn button:hover{
+    color: #333D79FF !important;  
+    background:none !important;
+    border: none;
+    border: 2px solid #333D79FF !important;
+    text-decoration: none !important;
+    }
+    
 .gallary-video-seemoreBtn{
     display: flex;
     justify-content: center;
 padding-bottom: 50px;
 
 }
-.gallary-video-seemoreBtn button{
-color: #ffffff;  
-background:#333D79FF;
-border: none;
+.gallary-video-seemoreBtn a{
+    text-decoration: none;
 }
+.gallary-video-seemoreBtn button{
+    color: #333D79FF;  
+    background:none;
+    border: none;
+    border: 2px solid #333D79FF;
+    text-decoration: none !important;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+.gallary-video-seemoreBtn button:hover{
+    color: #333D79FF !important;  
+    background:none !important;
+    border: none;
+    border: 2px solid #333D79FF !important;
+    text-decoration: none !important;
+    }
+    
 /* gallary-video-seemoreBtn
 gallary-img-seemoreBtn */
 
