guest carousel added on the website to show in the ceremony for #58

--- a/src/component/AnnirversaryModal/AnnirversaryModal.css
+++ b/src/component/AnnirversaryModal/AnnirversaryModal.css
@@ -67,4 +67,12 @@
   .closeButtonPi{
     font-size: 2rem;
   }
+
+  @media screen and (max-width:960px){
+    .modal{
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+    
+  }
   
