--- a/src/component/AnnirversaryModal/AnnirversaryModal.css
+++ b/src/component/AnnirversaryModal/AnnirversaryModal.css
@@ -4,7 +4,6 @@
     top: 0;
     right: 0;
     bottom: 0;
-    /* background-color: rgba(0, 0, 0, 0.5); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,6 +11,7 @@
     transition: all 0.3s ease-in-out;
     pointer-events: none;
     /* border-radius: 10px; */
+    z-index: 1000;
   }
   
   .modal.enter-done {
@@ -61,7 +61,7 @@
   .modalImageContainer img{
     width: 100%;
     border-radius: 10px;
-    max-height: 600px;
+    max-height: 70vh;
   }
 
   .closeButtonPi{
