--- a/src/component/About/Counter/Counter.css
+++ b/src/component/About/Counter/Counter.css
@@ -4,6 +4,11 @@
   border-radius: 12px;
   margin-left: 1px;
   margin-right: 1px;
+  transition: all 0.4s ease-in-out;
+}
+
+.counterDiv:hover{
+  transform: scale(1.02);
 }
 .counter {
   font-family: poppins, sans-serif;
