--- a/src/component/Home/ThirdAnniversarySection/ThirdAnniversarySection.css
+++ b/src/component/Home/ThirdAnniversarySection/ThirdAnniversarySection.css
@@ -42,6 +42,14 @@
     max-height: 350px;
 }
 
+.thirdAnniversaryImg{
+    transition: all .4s ease-in-out;
+}
+
+.thirdAnniversaryImg:hover{
+    transform: scale(1.1);
+}
+
 
 /* well wisher file css  */
 
