--- a/src/component/Services/AllServices/NrbService.css
+++ b/src/component/Services/AllServices/NrbService.css
@@ -4,6 +4,13 @@
     margin: .5rem;
     clip-path: polygon(50% 0%, 100% 0, 100% 100%, 75% 100%, 13% 100%, 0 85%, 0 0);
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    transition: all 0.4s ease-in-out;
+}
+
+.serviceContent:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    transform: scale(1.03);
+    
 }
 .imgServiceContainer img{
     width: 100%;
