--- a/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
+++ b/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
@@ -20,10 +20,10 @@
         /* margin-top: 30px; */
     }
     .executive-ambassador-flex img{
-    border-radius: 50%;
-     width: 60%;
-     margin-left: 20%;
-     margin-top: -20px;
+    width: 100%;
+    max-height: 200px;
+    border-radius: 4px;
+    margin-top: -20px;
     }
     .executive-ambassador-name{
       font-size: 15px !important;
