featured members data changed and fixex #65

--- a/src/component/Home/FeaturedMembers/FeatureMembers.css
+++ b/src/component/Home/FeaturedMembers/FeatureMembers.css
@@ -26,7 +26,8 @@
     border-radius: 10px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     position: relative;
-    top: -30px;
+    top: -40px;
+    min-height: 200px;
 }
 
 @media screen and (max-width: 960px){
