--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,89 +1,88 @@
 .navbar {
-    /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
-    /* background: #cde3f5; */
-    background: #FFFFFF;
-    /* color: #cde3f5; */
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    -moz-box-shadow: 0 1px 2px rgba(90, 90, 90, 0.4);
-    -webkit-box-shadow: 0 1px 2px rgba(90, 90, 90, 0.4);
-    box-shadow: 0 1px 3px rgba(90, 90, 90, 0.4);
+  /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
+  /* background: #cde3f5; */
+  background: #ffffff;
+  /* color: #cde3f5; */
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  -moz-box-shadow: 0 1px 2px rgba(90, 90, 90, 0.4);
+  -webkit-box-shadow: 0 1px 2px rgba(90, 90, 90, 0.4);
+  box-shadow: 0 1px 3px rgba(90, 90, 90, 0.4);
 
-    /* for the top fixed code  */
-    /* overflow: hidden; */
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 999;
+  /* for the top fixed code  */
+  /* overflow: hidden; */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
 
-  }
-  
-  .navbar-logo {
-    /* color: #5F6C7A; */
-    color: #1D354F;
-    justify-self: start;
-    margin-left: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 1.5rem;
-  }
-  
-  .fa-firstdraft {
-    margin-left: 0.5rem;
-    font-size: 1.6rem;
-  }
-  
-  .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(10, auto);
-    grid-gap: 5px;
-    list-style: none;
-    text-align: center;
-    width: 75vw;
-    justify-content: end;
-    margin-right: .2rem;
-  }
-  
-  .nav-item {
-    display: flex;
-    align-items: center;
-    height: 80px; 
-    /* height should be changed in mobile to be responsive */
-  }
-  
-  .nav-links {
-    /* color: #5F6C7A;  */
-    color: #242222;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    font-size: .9rem;
-    min-width: max-content;
-  }
-  
-  .nav-links:hover {
-    color: #000000;
-    background-color: #B6DAFF;
-    padding: 1.9rem 1rem;
-    border-radius: 0px;
-    transition: all 0.2s ease-out;
-  }
-  
-  .fa-bars {
-    color: #242222;
-  }
-  
-  .nav-links-mobile {
-    display: none;
-  }
-  
-  .menu-icon {
-    display: none;
-  }
+.navbar-logo {
+  /* color: #5F6C7A; */
+  color: #1d354f;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
 
-  /* @media screen and (min-width: 961px) {
+.fa-firstdraft {
+  margin-left: 0.5rem;
+  font-size: 1.6rem;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(10, auto);
+  grid-gap: 5px;
+  list-style: none;
+  text-align: center;
+  width: 75vw;
+  justify-content: end;
+  margin-right: 0.2rem;
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  /* height should be changed in mobile to be responsive */
+}
+
+.nav-links {
+  /* color: #5F6C7A;  */
+  color: #242222;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  min-width: max-content;
+}
+
+.nav-links:hover {
+  color: #000000;
+  background-color: #b6daff;
+  padding: 1.9rem 1rem;
+  border-radius: 0px;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+  color: #242222;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+/* @media screen and (min-width: 961px) {
     .navbar{
       overflow: hidden;
       position: fixed;
@@ -93,55 +92,54 @@
     }
     
   } */
-  
-  @media screen and (max-width: 960px) {
 
-    /* this is for the navbar visible button in mobile */
-    .navbar{
-      overflow: visible;
-    }
+@media screen and (max-width: 960px) {
+  /* this is for the navbar visible button in mobile */
+  .navbar {
+    overflow: visible;
+  }
 
-    .NavbarItems {
-      position: relative;
-    }
-    .logoNRB{
-      position: relative;
-      top: -20px;
-      left: -60px;
-    }
+  .NavbarItems {
+    position: relative;
+  }
+  .logoNRB {
+    position: relative;
+    top: -20px;
+    left: -60px;
+  }
 
-    .navbar > ul {
-        margin-block-start: 0;
-        margin-block-end: 0;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
-        padding-inline-start: 0;
-    }
-  
-    /* min-height was 90vh  */
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      min-height: 93vh;
-      
-      position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-    }
-  
-    .nav-menu.active {
-      background: #242222;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-    }
+  .navbar > ul {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0;
+  }
+
+  /* min-height was 90vh  */
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 93vh;
+
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
 
   /* for mobile responsive navbar  */
-    /* .nav-item {
+  /* .nav-item {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -150,73 +148,71 @@
     } */
 
   /* code ends here for mobile responsive  */
-  
-    .nav-links {
-      color: #d2d7dd; 
-      text-align: center;
-      padding: 1rem;
-      width: 100%;
-      display: table;
-    }
-  
-    .nav-links:hover {
-      background-color: #B6DAFF;
-      border-radius: 0;
-      padding: 0.5rem 1rem;
-    }
-  
-    .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(25%, 50%);
-    }
-  
-    .menu-icon {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-100%, 60%);
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-  
-    .fa-times {
-      color: #242222;
-      font-size: 2rem;
-    }
-  
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      padding: 1.5rem;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      background: #1888ff;
-      text-decoration: none;
-      color: #fff;
-      font-size: 1.5rem;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #1888ff;
-      transition: 250ms;
-    }
-  
-    button {
-      display: none;
-    }
+
+  .nav-links {
+    color: #d2d7dd;
+    text-align: center;
+    padding: 1rem;
+    width: 100%;
+    display: table;
   }
 
-  @media screen  and (max-width: 400px){
-    .logoNRB{
-      width: 130px;
-      height: 50px;
-      left: -35px
-    }
-    
+  .nav-links:hover {
+    background-color: #b6daff;
+    border-radius: 0;
+    padding: 0.5rem 1rem;
   }
-  
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+    color: #242222;
+    font-size: 2rem;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    background: #1888ff;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.5rem;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #1888ff;
+    transition: 250ms;
+  }
+
+  button {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .logoNRB {
+    width: 130px;
+    height: 50px;
+    left: -35px;
+  }
+}
