--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -19,3 +19,19 @@
 .footerLogoColor{
     color: #1F1FA0;
 }
+
+.youtubeLink:hover{
+    color: red;
+}
+.linkedinLink:hover{
+    color: #0072B1
+}
+.fbLink:hover{
+    color: #4267B2;
+}
+.twitterLink:hover{
+    color: #00ACEE;
+}
+.instaLink:hover{
+    color:#405DE6
+}
