--- a/src/pages/Membership/MembershipProcess/MembershipProcess.css
+++ b/src/pages/Membership/MembershipProcess/MembershipProcess.css
@@ -22,17 +22,36 @@ box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     color: var(--primeBLue);
 }
 
+/*
+
+#fdd8e5
+#e9dddd
+#b3e4fa
+
+*/
+
 .stepToMemberOne{
-    background-color: #f3f0f0;
+    background-color: #e9dddd;
     border-radius: 7px;
+
 }
+
 .stepToMemberTwo{
-    background-color: #E1F5FE;
+    background-color: #b3e4fa;
     border-radius: 7px;
 }
 .stepToMemberThree{
-    background-color: #FCE4EC;
+    background-color: #fdd8e5;
     border-radius: 7px;
+}
+
+.stepToMemberOne, .stepToMemberTwo , .stepToMemberThree {
+    transition: all 0.7s ease-in-out;
+}
+
+.stepToMemberOne:hover, .stepToMemberTwo:hover, .stepToMemberThree:hover{
+    transform: scale(1.03);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 
