--- a/src/component/Commitees/ExecutiveAmbassador/ExOverlayCard.css
+++ b/src/component/Commitees/ExecutiveAmbassador/ExOverlayCard.css
@@ -1,81 +1,85 @@
-.overlay-executive-ambassador-container{
-    /* background:#f3f7f5; */
-    background: #E5F0F8;
-    padding: 30px;
-     /* margin: 50px 100px; */
-     border-bottom-left-radius: 10px;
-     margin-top: -35px;
-     border-bottom-right-radius: 10px;
-     }  
-      /* .overlay-executive-ambassador{
+.overlay-executive-ambassador-container {
+  /* background:#f3f7f5; */
+  background: #e5f0f8;
+  padding: 30px;
+  /* margin: 50px 100px; */
+  border-bottom-left-radius: 10px;
+  margin-top: -35px;
+  border-bottom-right-radius: 10px;
+}
+/* .overlay-executive-ambassador{
        width: 100%;
      }  */
-     .overlay-executive-ambassador-card{
-        /* padding: 20px; */
-         box-shadow: none;
-         /* background: #333D79FF; */
-         background: #fcfcfc;
-         /* color: #FAEBEFFF; */
-         color: #333D79FF;
-         /* margin-top: 30px; */
-     }
-     .overlay-executive-ambassador-flex img{
-     width: 100%;
-     max-height: 200px;
-     border-radius: 4px;
-     margin-top: -20px;
-     }
-     .overlay-executive-ambassador-name{
-       font-size: 15px !important;
-       text-align: start;   
- font-weight: bold;
- letter-spacing: .7px;
-     }
-     .overlay-executive-ambassador-title{
-        font-size: 14px;
-        text-align: start;
-        font-weight: 400;    
-        margin-top: 12px;
-        letter-spacing: .5px;
-        line-height: 22px;
-     }
-     .overlay-executive-ambassador-socialicons{
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        margin-top: -21px;
-        left: 0;
-        right: 0;
-        /* height: 100%; */
-        width: 100%;
-        opacity: 0;
-        transition: 1s ease-in-out;
-        background-color: rgb(46, 49, 45);
-        border-radius: 4px;
-     }
-     .overlay-executive-ambassador-address{
-        display: flex;
-        align-items: center;
-     }
-     .overlay-executive-ambassador-address-span{
-        font-size: 15px;
-        font-weight: 100;
-        margin-left: 10px;
-     }
-     .pi-map-marker{
-        font-size: 15px;
-        color: #291cdb;
-     }
-     .overlay-executive-ambassador-socialicons{
-        display: flex;
-        align-items: center;
-        padding:0px 20px;
-        justify-content: space-around;
-     }
-     .overlay-executive-ambassador-socialicons a i{
-     font-size: 20px;
-     }
-     /* .overlay-executive-ambassador-btn{
+.overlay-executive-ambassador-card {
+  /* padding: 20px; */
+  box-shadow: none;
+  /* background: #333D79FF; */
+  background: #fcfcfc;
+  /* color: #FAEBEFFF; */
+  color: #333d79ff;
+  /* margin-top: 30px; */
+}
+.overlay-executive-ambassador-flex img {
+  width: 100%;
+  max-height: 200px;
+  border-radius: 4px;
+  margin-top: -20px;
+}
+.overlay-executive-ambassador-name {
+  font-size: 17x !important;
+  text-align: start;
+  font-weight: bold;
+  letter-spacing: 0.7px;
+}
+.overlay-executive-ambassador-title {
+  font-size: 14px;
+  text-align: start;
+  font-weight: 400;
+  margin-top: 12px;
+  letter-spacing: 0.5px;
+  line-height: 22px;
+}
+.overlay-executive-ambassador-socialicons {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin-top: -21px;
+  left: 0;
+  right: 0;
+  /* height: 100%; */
+  /* width: 100%; */
+  opacity: 0;
+  transition: 1s ease-in-out;
+  background-color: rgb(46, 49, 45);
+  border-radius: 4px;
+}
+.social_Icon {
+  margin-top: 2px;
+}
+.overlay-executive-ambassador-address {
+  display: flex;
+  align-items: center;
+  margin-top: -14px;
+}
+.overlay-executive-ambassador-address-span {
+  font-size: 12px;
+  font-weight: 600;
+  margin-left: 8px;
+}
+.pi-map-marker {
+  font-size: 15px;
+  color: #291cdb;
+}
+.overlay-executive-ambassador-socialicons {
+  display: flex;
+  align-items: center;
+  padding: 0px 20px;
+  justify-content: space-around;
+}
+.overlay-executive-ambassador-socialicons a i {
+  font-size: 20px;
+}
+/* .overlay-executive-ambassador-btn{
         display: flex;
         justify-content: end;
         margin: 20px 0px;      
@@ -90,28 +94,28 @@
     font-weight: bold;
     cursor: pointer;
     } */
-     /* .overlay-executive-ambassador-join-btn{
+/* .overlay-executive-ambassador-join-btn{
         font-size: 10px !important;
         padding: 8px;
      } */
- .overlay-image-container{
-    position: relative;
+.overlay-image-container {
+  position: relative;
   width: 100%;
   height: 100%;
- }
- .image {
-    display: block;
-    width: 100%;
-    height: 0% !important;
-  }
-  .overlay-image-container:hover .overlay-executive-ambassador-socialicons{
-    opacity: .9;
-  }
+}
+.image {
+  display: block;
+  width: 100%;
+  height: 0% !important;
+}
+.overlay-image-container:hover .overlay-executive-ambassador-socialicons {
+  opacity: 0.9;
+}
 
-     @media only screen and (max-width:575px){
-       .overlay-executive-ambassador-container{
-           /* margin: 50px 100px; */
-           border-bottom-left-radius: 0px;
-           border-bottom-right-radius: 0px;
-           }  
-     }
+@media only screen and (max-width: 575px) {
+  .overlay-executive-ambassador-container {
+    /* margin: 50px 100px; */
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+}
