--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -126,6 +126,11 @@
     box-sizing: border-box;
     -webkit-transition: all .3s;
     transition: all .3s;
+
+    -webkit-animation: glowingJoin 1500ms infinite;
+    -moz-animation: glowingJoin 1500ms infinite;
+    -o-animation: glowingJoin 1500ms infinite;
+    animation: glowingJoin 1500ms infinite;
   }
   .btn-join span:nth-child(1) {
     box-shadow:
@@ -164,6 +169,33 @@
     -webkit-transform: rotateX(-90deg);
     -moz-transform: rotateX(-90deg);
     transform: rotateX(-90deg);
+  }
+
+
+
+
+  @-webkit-keyframes glowingJoin {
+    0% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
+    50% { background-color: rgb(0,172,238); -webkit-box-shadow: 0 0 40px rgb(0,172,238); }
+    100% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
+  }
+  
+  @-moz-keyframes glowingJoin {
+    0% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
+    50% { background-color: rgb(0,172,238); -webkit-box-shadow: 0 0 40px rgb(0,172,238); }
+    100% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
+  }
+  
+  @-o-keyframes glowingJoin {
+    0% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
+    50% { background-color: rgb(0,172,238); -webkit-box-shadow: 0 0 40px rgb(0,172,238); }
+    100% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
+  }
+  
+  @keyframes glowingJoin {
+    0% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
+    50% { background-color: rgb(0,172,238); -webkit-box-shadow: 0 0 40px rgb(0,172,238); }
+    100% { background-color: rgba(2,126,251,1); -webkit-box-shadow: 0 0 3px rgba(2,126,251,1); }
   }
   
 @media screen and (max-width: 960px) {
