photo gallery done

--- a/src/component/Galllery/PhotoGallery/PhotoGallaryGrid.css
+++ b/src/component/Galllery/PhotoGallery/PhotoGallaryGrid.css
@@ -21,3 +21,10 @@ border-radius:10px;
 width: 100%;
 /* border: 8px solid #dcdddb; */
 }
+.sh{
+    background: rgb(32, 26, 200);
+    height: 30px;
+}
+.hi{
+    background: green;
+}
