--- a/src/component/Home/PhotoCarousel/PhotoCarousel.css
+++ b/src/component/Home/PhotoCarousel/PhotoCarousel.css
@@ -20,6 +20,8 @@
 .topPhotoCarouselCard{
     max-height: 85vh;
     overflow: hidden;
+    top: -20px;
+    position: relative;
 }
 
 @keyframes zoomInImageFeature {
