--- a/src/component/Home/TopBlogs/BlogCarousel/BlogCarousel.css
+++ b/src/component/Home/TopBlogs/BlogCarousel/BlogCarousel.css
@@ -17,8 +17,9 @@
 
 .blogImgDiv img{
     width: 100%;
-    object-fit: cover;
+    object-fit:fill;
     border-radius: 12px;
+    max-height: 400px;
 }
 
 .p-carousel-item-active{
